# eval_agent

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
agents/: __init__.py  augment_agent.py  filter_agent.py  rag_retriever_agent.py  report_writer_agent.py  scoring_agent.py  seraph_agent.py
data/processed/: chunks.json
data/raw/: candidates.json  seed_urls.json
db/chroma_db/: README.md
db/chroma_db/e2a63455-3990-4916-a34a-81305cff2dcc/: index_metadata.pickle
docs/: CONTRIBUTING.md  architecture.md  rag_retriever_agent_README.md  scorecard.md  scoring_agent_README.md  seraph_agent_summary.md
docs/templates/: report.html.j2
graph/: graph.py  run.py  state.py  visualize.py
outputs/reports/: FinChat AI.html  Tendi.html
rag/: pyvenv.cfg
rag/Scripts/: activate  activate.bat
scripts/: render_sample_report.py  reset_chroma.py  test_scoring.py
tests/: test_imports.py  test_run_stub.py  test_scoring_agent.py
