[project]
name = "eval-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.1.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.9",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "pgvector>=0.4.1",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
]
