[project]
name = "eval-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.50.0",
  "langgraph>=0.6.9",
  "chromadb>=1.1.1",
  "beautifulsoup4>=4.14.2",
  "pdfplumber>=0.11.7",
  "pymupdf>=1.26.4",
  "pandas>=2.3.3",
  "matplotlib>=3.9.0",
  "weasyprint>=61.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.9", "black>=24.8.0", "pytest>=8.3.0"]